removed promptflow previous version to avoid ragcore file - I win the commit game AGAIN
Still need to add in filterable search field for product type in ai search index

Began creating new promptflow for RAG 2.0 process

--- a/4_accelerators/01-rag-agent/rag-agent-promptflow/intent_detection_and_rewrite.jinja2
+++ b/4_accelerators/01-rag-agent/rag-agent-promptflow/intent_detection_and_rewrite.jinja2
@@ -56,3 +56,13 @@ system:
 
 user:
 Please generate search queries for the conversation above based on instructions above to help answer the "Current user question".
+
+{% for item in chat_history %}
+user:
+{{item.inputs.question}}
+assistant:
+{{item.outputs.answer}}
+{% endfor %}
+
+user:
+{{question}}
