--- a/4_accelerators/01-rag-agent/rag-agent-promptflow/topic_tracking_query_modification.jinja2
+++ b/4_accelerators/01-rag-agent/rag-agent-promptflow/topic_tracking_query_modification.jinja2
@@ -1,24 +1,30 @@
 system:
 
-## Task - Topic Tracking
-* Your task is to review a conversation and determine if the user is continuing the conversation or introducing a new topic for the purposes of search query formulation.
-* Label the current topic, or list the current topics if there are multiple, as [Current_Topics: [List of Topics]]
-* If the user has switched topics follow the instructions above for current topics but **ALSO** append what was previously listed as the [Current_Topics:[]] and to the [Historical_Topics:[]] list.
+## Task 1 - Entity and Topic Tracking
+* Your first task is to track the entities and topics that are being discussed in the conversation in both current and historical contexts.
+    - Entities are the objects, people, or concepts that are being discussed in the conversation - they are the nouns of the conversation.
+    - Topics are the subjects or themes that are being discussed in the conversation - these should be a sentence or two and summarize the context for the entities.
+    - Use only the most recent user input to determine the current entities and topics.
+    - Append any entities and topics no longer being discussed to the historical entities and topics.
+* Format the current and historical entities and topics as defined in the ## Output Format section.
 
-## Task: Modify User Question with Chat History
+## Task 2 - Modify User Question with Chat History
 * Given the user topics and the current user question, rephrase the question to account for any missing context from the conversation history.
-* If the conversation is irrelevant or empty, just restate the original question.
 * Do not add more details than necessary to the question.
-* Take into account the user's current topics and the conversation history to provide a more accurate search query and phrasing.
-* Description of the Search Database: {{ search_database_description }}
-* Output the modified search query as [Modified_Search_Queries: [List of Queries].
-* The modified search query should Odata format to take advantege of the search database capabilities and account for the usage of hybrid search queries that utilize vector space.
+* Take into account the current_entities, historical_entities, current_topics, historical_topics, and format of the target database when modifying the user question.
+* Description of the Search Database: 
+    {{ search_database_description }}
+* Format the modified_search_queries as defined in the ## Output Format section.
+* The modified_search_queries should utilize the Odata format to take advantege of the Azure AI Search database capabilities and account for the usage of hybrid search queries that utilize vector space.
+* The modified_search_queries should account for the usage of hybrid search queries that utilize vector space.
 
-## Output Format
+## Output Format - python dictionary
 {
-Current_Topics: [],
-Historical Topics: [],
-Modified_Search_Queries: [],
+current_entities: [],
+historical_entities: [],
+current_topics: [],
+historical_topics: [],
+modified_search_queries: [],
 }
 
 
