minor correction withoutput formatting

--- a/4_accelerators/01-rag-agent/rag-agent-promptflow/topic_tracking_query_modification_node.jinja2
+++ b/4_accelerators/01-rag-agent/rag-agent-promptflow/topic_tracking_query_modification_node.jinja2
@@ -28,7 +28,7 @@ system:
         {{filter_list}}
     
 
-## Output Format - python dictionary with json double quotes
+## Output Format - Ensure all output valid JSON
 * NOTE: DO NOT SET ANY VALUE FOR "filterable_field eq value" as filterable_field is not being used in the search database.
 {
     "current_entities": [],
